# speclink

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
speclink/: __init__.py  cli.py  wizard.py
speclink/_prompts/: __init__.py  batch.yaml  classification.yaml  rewriter.yaml
speclink/_templates/: __init__.py  github_action.yaml
speclink/core/: __init__.py  config.py  llm.py  logging.py  models.py  paths.py  store.py
speclink/preprocessing/: __init__.py  code.py  code_extraction.py  markdown.py
speclink/preprocessing/queries/: python.scm  typescript.scm
speclink/retrieval/: __init__.py  analyzer.py  classifier.py  incremental.py  reranker.py  stages.py
speclink/rewrite/: __init__.py  batch.py  diff.py  rewriter.py  stages.py  sync.py
tests/: TEST_PLAN.md  conftest.py
tests/e2e/: test_analyze_flow.py  test_sync_flow.py
tests/integration/: test_cli_commands.py  test_incremental_pipeline.py  test_markdown_pipeline.py  test_preprocessing_pipeline.py  test_rewrite_pipeline.py  test_store_filesystem.py
tests/unit/: test_batch.py  test_classifier.py  test_cli.py  test_code.py  test_code_extraction.py  test_config.py  test_diff.py  test_incremental.py  test_llm.py  test_logging.py  test_markdown.py  test_models.py  test_paths.py  test_reranker.py  test_rewriter.py  test_stages.py  test_store.py  test_wizard.py
